--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -27,4 +27,11 @@
   .member-card img {
     width: 100px;
   }
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.view-buttons button:hover {
+    background-color: #003f6b;
+}
 }
